src/test/deca/codegen/valid/black-box/overflow_register_float.deca
{
    if(1.0+(1.0+(1.0+(1.0+(1.0+(1.0+(1.0+(1.0+(1.0+(1.0+(1.0+(1.0+(1.0+(1.0+(1.0+(1.0+(1.0+(1.0+(1.0+(1.0+(1.0+(1.0+(1.0+(1.0))))))))))))))))))))))) == 24){
        print("ok");
    }
}