src/test/deca/codegen/invalid/oracle/operator_mult_2.deca
{
    if(1 <= 2 >= 1.5){
        print("ok");
    }
    print("ok");
}